# IndieStudio

./: GonetletConfig.h.in  README.md  install.sh
.Maps/: 1.map
libraries/sfml/lib/windows/: sfml-audio.exp  sfml-audio.lib  sfml-system.exp  sfml-system.lib
ressources/Fonts/: archive.tar
ressources/Fonts/ATH/: ath.xml
ressources/Fonts/Comics56px/: Comics56px.xml
ressources/Fonts/Comics72px/: Comics72px.xml
ressources/Map/: map.mtl
ressources/Models/Diablo/: boss1_run.ms3d
ressources/Models/Door/: door.ms3d  door.mtl  door_egypte.ms3d  door_egypte_two.ms3d  frame_list
ressources/Models/archere/: archere.ms3d  frames_archere.txt  n906_00.tga  n906_01.tga  n906_02.tga  n906_03.tga  n906_05.tga  n906_06.tga
ressources/Models/boss1/: frames_boss1.txt
ressources/Models/coin/: coin.ms3d
ressources/Models/guardian/: frames_guardian.txt  guardian.ms3d
ressources/Models/key/: gold_key.mtl
ressources/Models/monstre1/: frames_monstre.txt  monstre1.ms3d  tex_char_Sledge_body_diff.tga  tex_char_Sledge_body_norm.tga  tex_char_Sledge_head_diff.tga  tex_char_Sledge_head_norm.tga
ressources/Models/mundus_human/: mundus.ms3d  mundus_em.mtl  t_mundus_emmisive_d.tga  t_mundus_emmisive_veins_n.tga
ressources/Models/warrior/: WarriorKnight.fbx  WarriorKnight.mb  frames_warrior.txt  warrior.ms3d
ressources/Models/wizard/: frames_wizzard.txt  wizard.ms3d
ressources/Warrior/: Axe.tga  Warrior.ms3d  frames_warrior.txt
ressources/awp_india/: awp_india.mtl
ressources/score/: score.data
sources/: CMakeLists.txt  include.h  main.cpp
sources/Core/: Core.cpp  Core.hpp  GUI.cpp  GUI.hpp  RessourcesManager.cpp  RessourcesManager.hpp
sources/Entity/: Archer.cpp  BasicMonster.cpp  Boss.cpp  EnnemyEntity.cpp  EnnemyEntity.hpp  Entity.cpp  Entity.hpp  Guardian.cpp  Healthbar.cpp  Healthbar.hpp  PlayableEntity.cpp  PlayableEntity.hpp  Warrior.cpp  Wizard.cpp
sources/Events/: EventHandler.cpp  EventHandler.hpp  Joystick.cpp  KeyInput.cpp
sources/Features/: ISettingsType.hpp  Score.cpp  Score.hpp  Settings.cpp  Settings.hpp  SettingsType.cpp  SettingsType.hpp
sources/GameObject/: GameObject.cpp  GameObject.hpp
sources/Gui/: GeneralGUI.cpp  GeneralGUI.hpp
sources/IA/: IA.cpp  IA.hpp  IA.py  valgrind-python.supp
sources/Menu/: Menu.cpp  Menu.hpp
sources/Projectil/: Fireball.cpp  Projectil.hpp
sources/RessourceManager/: Audio.cpp  Audio.hpp  AudioManager.cpp  AudioManager.hpp  Font.cpp  Font.hpp  FontsManager.cpp  FontsManager.hpp  Model3D.cpp  Model3D.hpp  Models3DManager.cpp  Models3DManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
sources/SpawnManager/: SpawnManager.cpp  SpawnManager.hpp
sources/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
